--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 
 
 /* =======Extra css start======== */
-h3{
+h1, h2, h3, h4, h5{
+    font-family: 'Bebas Neue', cursive;
     
 }
 h2, h3, h5{
@@ -11,39 +12,70 @@ h2, h3, h5{
 p{
     color: #515151;
 }
+.margin-top-buttom{
+    margin: 50px 0px;
+}
 .coustom-border{
     border-radius: 1.25rem !important;
 }
 .coustom-button{
-    width: 150px;
+    width: 140px;
+    height: 50px;
+    font-weight: 600;
+    border-radius: 1rem;
     text-transform: uppercase;
     background-color: #8FA927;
+    color: #fff;
+    
+}
+.coustom-button:hover{
+    
     color: #fff;
     
 }
 .coustom-button i{
     margin-right: 9px;
 }
-/* =======Extra css======== */
+/* =======Extra-css======== */
 
-/* =======nab-items start======== */
+
+/* =======header-section-start======== */
 .header-background{
-    background-color: #FFFBF0;
+    background-color: #ffefc58c;
 }
-.navbar-brand img{
-    width: 240px;
-    height: 30px;
-}
-.coustom-nav-link{
-    font-size: 18px; 
-    color: lightslategrey !important;
-}
-.coustom-nav-link:hover{
-    color: #000000 !important;
-}
-/* =======nab-items end======== */
 
-/* =======top-bannar start======== */
+.log-img{
+    width: 75%;
+}
+
+/* =======manu-item-start======== */
+.custom-manu a{
+    font-size: 18px;
+    font-weight: 700;
+}
+
+
+/* =======manu-item-start======== */
+
+
+
+
+/* =======header-sectionend-end======== */
+
+
+
+
+/* =======main-contant-start======== */
+
+
+
+/* =======top-bannar-start======== */
+.top-bannar-bg{
+    background-color: #FFFBF0;
+    padding-top: 20px;
+    padding-bottom: 100px;
+    
+}
 .costom-titel{
     margin-left: 20px;
 
@@ -55,16 +87,10 @@ p{
 .costom-titel span{
     color: #FABE4C;
 }
+/* =======top-bannar-end======== */
 
-/* =======top-bannar end======== */
+/* =======jacket-section-start======== */
 
-
-
-/* =======main contant start======== */
-
-
-
-/* =======owmen jacket section end======== */
 .custom-card{
     border: 0px;
     background-color: #fff;
@@ -83,26 +109,19 @@ p{
     height: 300px;
 
 }
-
 .custom-jacket{
     
     padding: 20px;
 }
-
 .coustom-price{
 
-    font-size: 30px;
-    font-weight: bold;
-    color: #FABE4C;
-    
+    font-size: 35px;
+    font-weight: 750;
+    color: #FABE4C;   
 }
-/* =======jacket section end======== */
+/* =======jacket-section-end======== */
 
-/* =======Services section start======== */
-.offer-img img{
-    width: 100%;
-    height: auto;
-}
+/* =======Services-section-start======== */
 .offer-img img{
     width: 100%;
     height: 350px;
@@ -116,28 +135,24 @@ p{
       border-radius: 25px;
       height: auto;
   }
-  
-
-/* =======Services section end======== */
+/* =======Services-section-end======== */
 
 
 
-/* =======subscribe section start======== */
+/* =======subscribe-section-start======== */
 .custom-subscribe{
     background-color: #FFFBF0;
     height: 300px;
 }
-
-/* =======subscribe section end======== */
-
-
-
-/* =======main contant end======== */
+/* =======subscribe-section-end======== */
 
 
 
-/* =======footer section start======== */
+/* =======main-contant-end======== */
 
+
+
+/* =======footer-section-start======== */
 #coustom-footer{
     background-color: lightslategrey;
 }
@@ -162,7 +177,14 @@ p{
     font-size: 25px;
 }
 .custom-icon :hover i{
-    color: #f9b7b7;
+    color: #f09e9e;
     
 }
-/* =======footer section end======== */
+/* =======footer-section-end======== */
+
+
+@media(max-width:600px){
+    .mw-center{
+        text-align: center;
+    }
+}
